<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/settings" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/audio_memory_is_limited_at"
                android:textAppearance="?attr/textAppearanceTitleLarge" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/history_limit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                tools:text="46 minutes and 40 seconds" />


            <!-- System Memory Card -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option_a_used_ram"
                        android:textAppearance="?attr/textAppearanceTitleLarge" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/used_ram_description"
                        android:textAppearance="?attr/textAppearanceBodyMedium" />

                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/memory_toggle_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:selectionRequired="true"
                        app:singleLine="false"
                        app:singleSelection="true">

                        <Button
                            android:id="@+id/memory_low"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            tools:text="128 MB" />

                        <Button
                            android:id="@+id/memory_medium"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            tools:text="256 MB" />

                        <Button
                            android:id="@+id/memory_high"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            tools:text="460 MB" />
                    </com.google.android.material.button.MaterialButtonToggleGroup>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/auto_save_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/auto_save_title"
                        android:textAppearance="?attr/textAppearanceTitleLarge" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/auto_save_description"
                        android:textAppearance="?attr/textAppearanceBodyMedium" />

                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/auto_save_duration_toggle_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:selectionRequired="true"
                        app:singleLine="false"
                        app:singleSelection="true">

                        <Button
                            android:id="@+id/auto_save_1m"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/one_minute" />

                        <Button
                            android:id="@+id/auto_save_5m"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/five_minutes" />

                        <Button
                            android:id="@+id/auto_save_30m"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/thirty_minutes" />
                    </com.google.android.material.button.MaterialButtonToggleGroup>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <!-- Audio Quality Card -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/option_b_audio_quality"
                        android:textAppearance="?attr/textAppearanceTitleLarge" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/audio_quality_description"
                        android:textAppearance="?attr/textAppearanceBodyMedium" />


                    <com.google.android.material.button.MaterialButtonToggleGroup
                        android:id="@+id/quality_toggle_group"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:selectionRequired="true"
                        app:singleLine="false"
                        app:singleSelection="true">

                        <Button
                            android:id="@+id/quality_8kHz"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="8 kHz" />

                        <Button
                            android:id="@+id/quality_16kHz"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="16 kHz" />

                        <Button
                            android:id="@+id/quality_48kHz"
                            style="?attr/materialButtonOutlinedStyle"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="48 kHz" />

                    </com.google.android.material.button.MaterialButtonToggleGroup>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
